# mipt-ded-bardak

./: .gitignore  CMakeLists.txt  README.md
.github/: CItest.ini
.github/workflows/: workflows.yaml
binmsg/: README.md  textmsg.md
binmsg/inc/: binmsg.hpp
boilerplates/: Vec2.hpp
clients/: CMakeLists.txt  README.md  default.ini
clients/ghost/: CMakeLists.txt  README.md  script.c  script.cpp
clients/pacman/: CMakeLists.txt  script.cpp
clients/players/: CMakeLists.txt
clients/players/ghost/: CMakeLists.txt  script.cpp
clients/players/pacman/: CMakeLists.txt  script.cpp
clients/random/: CMakeLists.txt  main.c  script.c
clients/random/inc/: bot.h  net.h  protocol.h
clients/random/src/: bot.c  main.c  net.c  protocol.c
clients/utils/: CMakeLists.txt  client_base.cpp  client_base.h  client_base.hpp  tcp_connection.cpp  tcp_connection.h  tcp_connection.hpp
clients/utils/base/: client_base.cpp  client_base.hpp
clients/utils/tcp/: tcp_connection.cpp  tcp_connection.hpp
misc/EventImpl/: Event-impl.cpp
modlib/: CMakeLists.txt  README.md
modlib-ifc/: CMakeLists.txt  README.md
modlib-ifc/inc/: AssetConfig.hpp  AssetManager.hpp  BmServerModule.hpp  Entity.hpp  Event.hpp  Map.hpp  RoleMgr.hpp  Timer.hpp
modlib/inc/: modlib_manager.hpp  modlib_mod.hpp
modlib/src/: modlib_manager.cpp
mods/assets/: CMakeLists.txt  asset_proto.hpp  main.cpp
mods/characters/: CMakeLists.txt  person_base.hpp
mods/characters/ghost/: main.cpp
mods/characters/pacman/: CMakeLists.txt  main.cpp  pacman_proto.hpp
mods/characters/person/: CMakeLists.txt  main.cpp
mods/characters/person/inc/: person.hpp  person_controller.hpp  person_gfx.hpp  person_manager.hpp
mods/characters/players/: CMakeLists.txt  player_base.hpp
mods/characters/players/ghost/: CMakeLists.txt  main.cpp
mods/characters/players/pacman/: CMakeLists.txt  main.cpp
mods/map/: CMakeLists.txt  Entity.cpp  Level.cpp  Tile.cpp  main.cpp  map.hpp
mods/person/: CMakeLists.txt  main.cpp  person_base.hpp
mods/person/bomber/: CMakeLists.txt  bomber_proto.hpp  main.cpp
mods/person/ghost/: CMakeLists.txt  ghost_proto.hpp  main.cpp
mods/person/pacman/: main.cpp
mods/role_manager/: CMakeLists.txt  main.cpp  role_proto.hpp
mods/timer/: CMakeLists.txt  timer_impl.hpp
mods/timer/src/: timer_impl.cpp
mods/tty-graphics/: CMakeLists.txt  main.cpp
mods/vis/: CMakeLists.txt  main.cpp  render.hpp  snapshot.hpp  visual.hpp
msva/: CMakeLists.txt  sample.ini
msva/src/: all.hpp  main.cpp
proto/: CMakeLists.txt  README.md  person.pan  srv.pan  turns.pan
servers/msva/: CMakeLists.txt  sample.ini
servers/msva/src/: all.hpp  main.cpp  msva_api.hpp  srv.cpp
specs/binmsg/: CMakeLists.txt  README.md
specs/binmsg/inc/: binmsg.hpp
specs/proto/: bomber.pan  ghost.pan  pacman.pan  person.pan  role.pan
std/: binmsg.md  textmsg.md
std/proto/: gmap.pan  turns.pan
std/textmsg_server/: CMakeLists.txt  README.md  textmsg_server.hpp
tools/pan/inc/: libpan.h  libpan_cxx_macros.hpp
tools/pan/src/: libpan.c  standalone.c
